# tafel

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
include/: Canvas.hpp  Context.hpp  Drawable.hpp  Kit.hpp  Style.hpp  Theme.hpp  Tool.hpp  Window.hpp
include/drawables/: Drawable.hpp  Path.hpp  Shapes.hpp  Spline.hpp  Text.hpp
include/tools/: Ellipse.hpp  Erasor.hpp  Line.hpp  Pan.hpp  Pencil.hpp  Rect.hpp  Selection.hpp  Spline.hpp  Text.hpp  Tool.hpp
include/ui/: Brush.hpp  ExportButton.hpp  Kit.hpp  Stroke.hpp
src/: Canvas.cpp  Kit.cpp  Window.cpp
src/drawables/: Ellipse.cpp  Line.cpp  Path.cpp  Rect.cpp  Spline.cpp  Text.cpp
src/tools/: Ellipse.cpp  Erasor.cpp  Line.cpp  Pencil.cpp  Rect.cpp  Selection.cpp  Spline.cpp  Text.cpp
src/ui/: Brush.cpp  ExportButton.cpp  Kit.cpp  Stroke.cpp
style/: Common.qss  Kit.qss  UI.qss
